# MaskDefence

./: CMakeLists.txt  README.md
artifacts/Android-arm64-v8a/lib/cmake/dlib/: dlibConfig.cmake
artifacts/Android-arm64-v8a/lib/pkgconfig/: dlib-1.pc
artifacts/Android-arm64-v8a/sdk/native/jni/: OpenCV-arm64-v8a.mk
artifacts/Android-arm64-v8a/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
artifacts/Android-armeabi-v7a/lib/cmake/dlib/: dlibConfig.cmake  dlibConfigVersion.cmake
artifacts/Android-armeabi-v7a/lib/pkgconfig/: dlib-1.pc
artifacts/Android-armeabi-v7a/sdk/native/jni/: OpenCVConfig.cmake
artifacts/Android-armeabi-v7a/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
artifacts/Android-x86/lib/cmake/dlib/: dlib.cmake  dlibConfig.cmake
artifacts/Android-x86/lib/pkgconfig/: dlib-1.pc
artifacts/Android-x86/sdk/native/jni/: OpenCV-x86.mk
artifacts/Android-x86/sdk/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
artifacts/Android-x86/sdk/native/jni/include/opencv2/: cvconfig.h
artifacts/Android-x86_64/include/dlib/: config.h
artifacts/Android-x86_64/lib/cmake/dlib/: dlibConfig.cmake  dlibConfigVersion.cmake
artifacts/Android-x86_64/lib/pkgconfig/: dlib-1.pc
artifacts/Android-x86_64/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
artifacts/CMake/common/Modules/: DLibConfigVersion.cmake  DlibConfig.cmake
cmake/: ProjectEnvironment.cmake
resources/: mask_detect_v2.svm  mask_detect_v2_NEW_OLD.svm  mask_detect_v2last.svm  res.qrc
source/: application_controller.cpp  application_controller.h  main.cpp
source/camera/: mask_detection_filter.cpp  mask_detection_filter.h
source/core/: mask_detection.cpp  mask_detection.h  mask_result.cpp  mask_result.h  mask_result_collector.cpp  mask_result_collector.h
source/utils/: opencv_helper.cpp  opencv_helper.h  rgb_frame_helper.cpp  rgb_frame_helper.h
ui/: main.qml
